# data-sail

./: LICENSE  README.md
code/Draft/: Draft.cabal
code/Draft/assets/: bid.plutus  data-consent.plutus  data-listing.plutus  dataToken.plutus
code/Draft/lecture/: DataConsent.hs  Vesting.hs
code/Draft/off-chain/chrome-extension-react/: package-lock.json
code/Draft/off-chain/chrome-extension-react/utils/: webserver.js
code/Draft/off-chain/extension/: README.md  background.js  contentScript.js  package.json  popup.js  webpack.config.js
code/Draft/off-chain/extension/src/: manifest.json
code/Draft/off-chain/frontend/: .env.template  package-lock.json  package.json
code/Draft/off-chain/frontend/data/: active-bids.json  data.json  token-listings.json
code/Draft/off-chain/frontend/src/: types.ts
code/Draft/off-chain/frontend/src/components/: AcceptBid.tsx  BidSection.tsx  Buyer.tsx  DataConsent.tsx  (+5 more)
code/Draft/off-chain/my-extension/: package-lock.json  package.json  tsconfig.json
code/Draft/off-chain/my-extension/config/: webpack.common.js  webpack.config.js
code/Draft/off-chain/my-extension/public/: manifest.json  popup.html
code/Draft/off-chain/my-extension/src/: popup.ts
code/Draft/off-chain/react-chrome-ext/: README.md  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
code/Draft/off-chain/react-chrome-ext/public/: sandbox.html
code/Draft/off-chain/react-chrome-ext/src/: App.css  App.tsx  index.css  index.tsx  sandbox.tsx
code/Draft/off-chain/ts-extension/: package-lock.json  package.json
code/Draft/on-chain/: Bid.hs  DataConsent.hs  DataListing.hs  DataTokenMinting.hs  ParameterizedVesting.hs
code/Draft/tests/: TDataListing.hs
(+102 files in other folders)
