cabal-version:      3.4
name:               draft
version:            0.1.0.0
author:             Markos Girgis
maintainer:         education@iohk.io
license:            MIT
build-type:         Simple

common common-all
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , utilities
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors

common common-all-tests
    import:           common-all
    build-depends:    QuickCheck
                    , tasty
                    , plutus-simple-model

library
    import:             common-all
    hs-source-dirs:     on-chain
                      , homework
    exposed-modules:    Homework1
                        Homework2
                        ParameterizedVesting
                        Vesting
                        DataListing
                        DataTokenMinting

test-suite draft-homework
    import:             common-all-tests
    type:               exitcode-stdio-1.0
    main-is:            THomework.hs
    hs-source-dirs:     tests
    build-depends:      draft